# finetuning

./: .gitignore  ARCHITECTURE_REDESIGN.md  CACHING_DESIGN.md  CUSTOM_INTERVIEW_TESTING.md  FLASH_ATTENTION_GUIDE.md  GUIDE.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_QUICK_REF.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml  test_custom_interviews.py
custom_interviews/: README.md  example_001_upper_respiratory_infection.json  example_002_hypertension.json  example_003_migraine.json
notebooks/: 00_Project_Overview.ipynb  01_Data_Loading_and_Exploration.ipynb  01_EDA.ipynb  02_Data_Processing_and_Tokenization.ipynb  02_Data_loading.ipynb  03_LLM_Evaluation.ipynb  04_SLM_Training.ipynb  04_SLM_Training_LoRA.ipynb  05_SLM_Evaluation.ipynb  05_SLM_Evaluation_Finetuned.ipynb  06_Ergebnisanalyse.ipynb  preprocessing.ipynb
notebooks_llm/: 00_Project_Overview.ipynb  01_Data_Loading_and_Exploration.ipynb  02_Data_Processing_and_Tokenization.ipynb  03_LLM_Evaluation_ZeroShot.ipynb  06_Results_Analysis_and_Comparison.ipynb  07_Custom_Interview_Testing.ipynb
src/config/: __init__.py  base_config.py
src/data/: __init__.py  data_loader.py  data_processor.py
src/evaluation/: __init__.py  metrics.py  visualization.py
src/models/: __init__.py  base_model.py  llm_model.py  slm_model.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py
tests/: test_pipeline.py
