[project]
name = "medical-diagnosis-finetuning"
version = "0.1.0"
description = "Datenschutzkonformes Finetuning eines Small Language Models für medizinische Diagnoseunterstützung"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.25.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "mlflow>=2.9.0",
    "tensorboard>=2.15.0",
    "pytest>=9.0.2",
    "ipynb>=0.5.1",
    "ipykernel>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

